versions/v3.6.0/doxygen/html/structmqtt__pubrec__param.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/structmqtt__pubrec__param.html
original_path: doxygen/html/structmqtt__pubrec__param.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

mqtt\_pubrec\_param Struct Reference

[Connectivity](group__connectivity.md) » [Networking](group__networking.md) » [MQTT Client library](group__mqtt__socket.md)

Parameters for MQTT publish receive (PUBREC).
[More...](#details)

`#include <[mqtt.h](mqtt_8h_source.md)>`

| Data Fields | |
| --- | --- |
| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) | [message\_id](#ab0f92884dbd6e63894210ff7f57fe62c) |
|  | Message id of the PUBLISH message being acknowledged. |

## Detailed Description

Parameters for MQTT publish receive (PUBREC).

## Field Documentation

## [◆ ](#ab0f92884dbd6e63894210ff7f57fe62c)message\_id

| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) mqtt\_pubrec\_param::message\_id |
| --- |

Message id of the PUBLISH message being acknowledged.

---

The documentation for this struct was generated from the following file:

- zephyr/net/[mqtt.h](mqtt_8h_source.md)

- [mqtt\_pubrec\_param](structmqtt__pubrec__param.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
